--- a/Pierre/Views/Home/Index.cshtml
+++ b/Pierre/Views/Home/Index.cshtml
@@ -20,6 +20,8 @@
   }
 </ul>
 
+@if (User.Identity.IsAuthenticated)
+{
 <h4>Flavors</h4>
 @if (Model["flavors"].Length == 0)
 {
@@ -31,8 +33,13 @@
     <li>@Html.ActionLink(@flavor.Name, "Details", "Flavor", new { id = @flavor.FlavorId})</li>
   }
 </ul>
-
+}
+else{
+  <h4>Flavors</h4>
+  <p>Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your flavors.</p>
+}
 <hr />
 
 <p>@Html.ActionLink("Manage treats", "Index", "Treat")</p>
-<p>@Html.ActionLink("Manage flavors", "Index", "Flavor")</p> 
+<p>@Html.ActionLink("Manage flavors", "Index", "Flavor")</p>
+<p>@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
